modified:   sideBar.html modified:   styleSideBar.css

--- a/sideBar.html
+++ b/sideBar.html
@@ -7,6 +7,7 @@
     <title>SideBar_CPS</title>
 </head>
 <body>
+    <main class="side-bar">
     <header class="header-side-bar">
         <button class="header-side-bar__button">
             <img src="./images/header/SVG-logo-menu.svg" alt="">
@@ -106,5 +107,6 @@
             </li>
         </ul>
     </footer>
+</main>
 </body>
 </html>
